--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "Server.js",
     "scripts": {
         "test": "mocha tests/*.js",
-        "start": "node app/src/Server.js",
+        "start": "node app/src/app.js",
         "start-dev": "nodemon app/src/Server.js",
         "debug": "DEBUG='mediasoup*' node app/src/Server.js",
         "compile": "npx webpack",
